SERVER-69276 Fixed use-after-move defect in DocumentSourceWriter